[package]
name = "background-jobs"
description = "Background Jobs implemented with sled, actix, and futures"
version = "0.6.0"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/Aardwolf/background-jobs"
readme = "README.md"
keywords = ["jobs", "processor", "actix", "sled"]
edition = "2018"

[workspace]
members = [
    "jobs-actix",
    "jobs-core",
    "jobs-sled",
    "examples/actix-example",
]

[features]
default = ["background-jobs-actix", "background-jobs-sled-storage"]

[dependencies.background-jobs-core]
version = "0.6"
path = "jobs-core"

[dependencies.background-jobs-actix]
version = "0.6"
path = "jobs-actix"
optional = true

[dependencies.background-jobs-sled-storage]
version = "0.1.3"
path = "jobs-sled"
optional = true
