[package]
name = "background-jobs-actix"
description = "in-process jobs processor based on Actix"
version = "0.6.0"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/Aardwolf/background-jobs"
keywords = ["jobs", "processor"]
edition = "2018"

[dependencies]
actix = "0.8"
background-jobs-core = { version = "0.6", path = "../jobs-core" }
chrono = "0.4"
failure = "0.1"
futures = "0.1"
log = "0.4"
num_cpus = "1.10.0"
rand = "0.6.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
