[package]
name = "background-jobs-core"
description = "Core types for implementing an asynchronous jobs processor on tokio"
version = "0.6.0"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/Aardwolf/background-jobs"
keywords = ["jobs", "processor"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.1.21"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
