[package]
name = "actix-example"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
background-jobs = { version = "0.6.0", path = "../.." }
failure = "0.1"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
sled = "0.24"
